--- a/airflow-core/src/airflow/ui/public/i18n/locales/ca/components.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ca/components.json
@@ -7,7 +7,7 @@
     "backwards": "Executar enrere",
     "dateRange": "Interval de dates",
     "dateRangeFrom": "Des de",
-    "dateRangeTo": "A",
+    "dateRangeTo": "Fins",
     "errorStartDateBeforeEndDate": "La data d'inici ha de ser anterior a la data de finalització",
     "maxRuns": "Màxim d'execucions actives",
     "missingAndErroredRuns": "Execucions absents i amb errors",
@@ -95,9 +95,9 @@
     "location": "línia {{line}} a {{name}}"
   },
   "reparseDag": "Reanalitzar el Dag",
-  "sortedAscending": "Ordenat de manera ascendent",
-  "sortedDescending": "Ordenat de manera descendent",
-  "sortedUnsorted": "No ordenat",
+  "sortedAscending": "ordenat de manera ascendent",
+  "sortedDescending": "ordenat de manera descendent",
+  "sortedUnsorted": "no ordenat",
   "taskTries": "Reintents de tasca",
   "toggleCardView": "Mostrar vista de targeta",
   "toggleTableView": "Mostrar vista de taula",
