--- a/airflow-core/src/airflow/ui/public/i18n/locales/he/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/he/dag.json
@@ -5,6 +5,33 @@
     "reason": "סיבה",
     "title": "תלויות החוסמות את תזמון המשימה"
   },
+  "calendar": {
+    "daily": "יומי",
+    "hourly": "שעתי",
+    "legend": {
+      "less": "פחות",
+      "more": "יותר"
+    },
+    "navigation": {
+      "nextMonth": "החודש הבא",
+      "nextYear": "השנה הבאה",
+      "previousMonth": "החודש הקודם",
+      "previousYear": "השנה הקודמת"
+    },
+    "noData": "אין נתונים זמינים",
+    "noRuns": "אין הרצות",
+    "totalRuns": "סה״כ הרצות",
+    "week": "שבוע {{weekNumber}}",
+    "weekdays": {
+      "friday": "ו׳",
+      "monday": "ב׳",
+      "saturday": "ש׳",
+      "sunday": "א׳",
+      "thursday": "ה׳",
+      "tuesday": "ג׳",
+      "wednesday": "ד׳"
+    }
+  },
   "code": {
     "bundleUrl": "כתובת החבילה",
     "noCode": "לא נמצא קוד",
@@ -64,8 +91,9 @@
   "panel": {
     "buttons": {
       "options": "אפשרויות",
-      "showGraph": "הצג תרשים",
-      "showGrid": "הצג רשת"
+      "showGantt": "הצג גאנט",
+      "showGraphShortcut": "הצג תרשים (לחץ g)",
+      "showGridShortcut": "הצג רשת (לחץ g)"
     },
     "dagRuns": {
       "label": "מספר הרצות Dag"
@@ -100,6 +128,7 @@
     "assetEvents": "אירועי משאבים",
     "auditLog": "יומן ביקורת",
     "backfills": "השלמות רטרואקטיביות",
+    "calendar": "לוח שנה",
     "code": "קוד תכנות",
     "details": "פרטים",
     "logs": "רישומים",
