--- a/airflow-core/src/airflow/ui/public/i18n/locales/he/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/he/hitl.json
@@ -1,4 +1,11 @@
 {
+  "filters": {
+    "response": {
+      "all": "הכל",
+      "pending": "ממתין",
+      "received": "נבדק"
+    }
+  },
   "requiredAction_one": "פעולה נדרשת",
   "requiredAction_other": "פעולות נדרשות",
   "requiredActionState": "מצב פעולה נדרשת",
