Reduce i18n surface area and parameterize dags test

--- a/airflow-core/src/airflow/ui/public/i18n/locales/zh-TW/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/zh-TW/hitl.json
@@ -6,7 +6,6 @@
       "received": "已回應"
     }
   },
-  "needsReview": "需要回應",
   "requiredAction_one": "待回應的任務實例",
   "requiredAction_other": "待回應的任務實例",
   "requiredActionState": "待回應的任務實例狀態",
@@ -28,7 +27,5 @@
     "responseReceived": "已回應",
     "responseRequired": "需要回應"
   },
-  "subject": "標題",
-  "tooltip_one": "{{count}} 個任務需要回應",
-  "tooltip_other": "{{count}} 個任務需要回應"
+  "subject": "標題"
 }
