--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/hitl.json
@@ -6,9 +6,10 @@
       "received": "Reviewed"
     }
   },
-  "needsReview": "Needs Review",
   "requiredAction_one": "Required Action",
   "requiredAction_other": "Required Actions",
+  "requiredActionCount_one": "Required Action ({{count}})",
+  "requiredActionCount_other": "Required Actions ({{count}})",
   "requiredActionState": "Required Action State",
   "response": {
     "error": "Response failed",
@@ -28,7 +29,5 @@
     "responseReceived": "Response Received",
     "responseRequired": "Response Required"
   },
-  "subject": "Subject",
-  "tooltip_one": "{{count}} task need review",
-  "tooltip_other": "{{count}} tasks need review"
+  "subject": "Subject"
 }
