Complete missing in common,dag, and hitl

--- a/airflow-core/src/airflow/ui/public/i18n/locales/he/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/he/common.json
@@ -8,6 +8,12 @@
     "Variables": "משתנים"
   },
   "allOperators": "כל האופרטורים",
+  "appearance": {
+    "appearance": "מראה",
+    "darkMode": "מצב כהה",
+    "lightMode": "מצב בהיר",
+    "systemMode": "עקוב אחר הגדרות המערכת"
+  },
   "asset_one": "נכס",
   "asset_other": "נכסים",
   "assetEvent_one": "אירוע נכס",
