--- a/airflow-core/src/airflow/ui/public/i18n/locales/he/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/he/dag.json
@@ -84,6 +84,8 @@
       "assetEvent_other": "אירועי בנכסים שנוצרו"
     },
     "failedLogs": {
+      "hideLogs": "הסתר רישומים",
+      "showLogs": "הצג רישומים",
       "title": "רישומים אחרונים של משימות שנכשלו",
       "viewFullLogs": "צפה ברישומים המלאים"
     }
