--- a/airflow-core/src/airflow/ui/public/i18n/locales/he/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/he/hitl.json
@@ -8,6 +8,8 @@
   },
   "requiredAction_one": "פעולה נדרשת",
   "requiredAction_other": "פעולות נדרשות",
+  "requiredActionCount_one": "פעולה נדרשת ({{count}})",
+  "requiredActionCount_other": "פעולות נדרשות ({{count}})",
   "requiredActionState": "מצב פעולה נדרשת",
   "response": {
     "error": "התגובה נכשלה",
