Align translations of 'runs'

--- a/airflow-core/src/airflow/ui/public/i18n/locales/he/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/he/dag.json
@@ -72,8 +72,8 @@
   },
   "overview": {
     "buttons": {
-      "failedRun_one": "הרצה שנכשלה",
-      "failedRun_other": "הרצות שנכשלו",
+      "failedRun_one": "ריצה שנכשלה",
+      "failedRun_other": "ריצות שנכשלו",
       "failedTask_one": "משימה שנכשלה",
       "failedTask_other": "משימות שנכשלו",
       "failedTaskInstance_one": "מופע משימה שנכשל",
