--- a/airflow-core/src/airflow/ui/public/i18n/locales/he/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/he/common.json
@@ -37,15 +37,15 @@
     "description": "תיאור",
     "documentation": "תיעוד Dag",
     "fileLocation": "מיקום קובץ",
-    "hasTaskConcurrencyLimits": "מגבלות ריצה מקבילה",
+    "hasTaskConcurrencyLimits": "מגבלות על משימות במקביל",
     "lastExpired": "פג תוקף לאחרונה",
     "lastParsed": "ניתוח אחרון",
     "latestDagVersion": "גרסת Dag אחרונה",
-    "latestRun": "הרצה אחרונה",
-    "maxActiveRuns": "מספר מרבי של הרצות פעילות",
+    "latestRun": "ריצה אחרונה",
+    "maxActiveRuns": "מספר מרבי של ריצות פעילות",
     "maxActiveTasks": "מספר מרבי של משימות פעילות",
     "maxConsecutiveFailedDagRuns": "מספר מרבי של כשלונות רצופים",
-    "nextRun": "ההרצה הבאה",
+    "nextRun": "הריצה הבאה",
     "owner": "בעלים",
     "params": "פרמטרים",
     "schedule": "תזמון",
@@ -59,8 +59,8 @@
     "dataIntervalStart": "תחילת מקטע נתונים",
     "lastSchedulingDecision": "החלטת תזמון אחרונה",
     "queuedAt": "זמן כניסה לתור",
-    "runAfter": "זמן ההרצה מוקדם ביותר",
-    "runType": "סוג הרצה",
+    "runAfter": "ריצה לאחר",
+    "runType": "סוג ריצה",
     "sourceAssetEvent": "אירוע נכס מקור",
     "triggeredBy": "הופעל על-ידי",
     "triggeringUser": "שם משתמש מפעיל"
@@ -104,9 +104,9 @@
     "logicalDateFromPlaceholder": "תאריך לוגי מ-",
     "logicalDateToPlaceholder": "תאריך לוגי עד",
     "mapIndexPlaceholder": "סנן לפי אינדקס מיפוי",
-    "runAfterFromPlaceholder": "זמן הרצה מוקדם ביותר מ-",
-    "runAfterToPlaceholder": "זמן הרצה מוקדם ביותר עד",
-    "runIdPlaceholder": "סנן לפי מזהה הרצה",
+    "runAfterFromPlaceholder": "ריצה לאחר (מתאריך)",
+    "runAfterToPlaceholder": "ריצה לאחר (עד תאריך)",
+    "runIdPlaceholder": "סנן לפי מזהה ריצה",
     "taskIdPlaceholder": "סנן לפי מזהה משימה"
   },
   "logicalDate": "תאריך לוגי",
@@ -149,7 +149,7 @@
     "running": "בביצוע",
     "scheduled": "מתוזמן"
   },
-  "runId": "מזהה הרצה",
+  "runId": "מזהה ריצה",
   "runTypes": {
     "asset_triggered": "הופעל על-ידי נכס",
     "backfill": "השלמה למפרע",
