--- a/airflow-core/src/airflow/ui/public/i18n/locales/ar/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ar/dag.json
@@ -100,6 +100,8 @@
       "assetEvent_zero": "لا توجد أي واقعة أصل"
     },
     "failedLogs": {
+      "hideLogs": "إخفاء السجلات",
+      "showLogs": "إظهار السجلات",
       "title": "سجلات المهام الفاشلة الأخيرة",
       "viewFullLogs": "عرض السجلات الكاملة"
     }
