Remove {{count}} in _two forms

--- a/airflow-core/src/airflow/ui/public/i18n/locales/ar/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ar/dag.json
@@ -154,7 +154,7 @@
     "mappedTaskInstances_many": "مثيل مهمة [{{count}}]",
     "mappedTaskInstances_one": "مثيل مهمة [{{count}}]",
     "mappedTaskInstances_other": "مثيل مهمة [{{count}}]",
-    "mappedTaskInstances_two": "مثيلان لمهمة [{{count}}]",
+    "mappedTaskInstances_two": "مثيلان لمهمة",
     "mappedTaskInstances_zero": "لا توجد أي مثيل مهمة",
     "overview": "نظرة عامة",
     "renderedTemplates": "القوالب المعروضة",
