--- a/airflow-core/src/airflow/ui/public/i18n/locales/ar/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ar/hitl.json
@@ -16,7 +16,7 @@
   "requiredActionCount_many": "إجراءات مطلوبة ({{count}})",
   "requiredActionCount_one": "إجراء مطلوب ({{count}})",
   "requiredActionCount_other": "إجراءات مطلوبة ({{count}})",
-  "requiredActionCount_two": "إجرَاءان مطلوبان ({{count}})",
+  "requiredActionCount_two": "إجرَاءان مطلوبان",
   "requiredActionCount_zero": "لا توجد إجراءات مطلوبة",
   "requiredActionState": "حالة الإجراء المطلوب",
   "response": {
