--- a/airflow-core/src/airflow/ui/public/i18n/locales/nl/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/nl/hitl.json
@@ -9,7 +9,7 @@
   "requiredAction_one": "Vereiste acties",
   "requiredAction_other": "Vereiste acties",
   "requiredActionCount_one": "Vereiste acties ({{count}})",
-  "requiredActionCount_other": "Vereiste aties ({{count}})",
+  "requiredActionCount_other": "Vereiste acties ({{count}})",
   "requiredActionState": "Vereiste actie status",
   "response": {
     "error": "Reactie mislukt",
