--- a/airflow-core/src/airflow/ui/public/i18n/locales/ca/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ca/dag.json
@@ -72,18 +72,24 @@
   },
   "overview": {
     "buttons": {
+      "failedRun_many": "Execucions fallides",
       "failedRun_one": "Execució fallida",
       "failedRun_other": "Execucions fallides",
+      "failedTask_many": "Tasques fallides",
       "failedTask_one": "Tasca fallida",
       "failedTask_other": "Tasques fallides",
+      "failedTaskInstance_many": "Instàncies de tasca fallides",
       "failedTaskInstance_one": "Instància de tasca fallida",
       "failedTaskInstance_other": "Instàncies de tasca fallides"
     },
     "charts": {
+      "assetEvent_many": "Esdeveniments d'Asset creats",
       "assetEvent_one": "Esdeveniment d'Asset creat",
       "assetEvent_other": "Esdeveniments d'Asset creats"
     },
     "failedLogs": {
+      "hideLogs": "Amagar registres",
+      "showLogs": "Mostrar registres",
       "title": "Registres de tasques fallides recents",
       "viewFullLogs": "Veure els registres complets"
     }
@@ -132,6 +138,7 @@
     "code": "Codi",
     "details": "Detalls",
     "logs": "Registres",
+    "mappedTaskInstances_many": "Instàncies de tasca [{{count}}]",
     "mappedTaskInstances_one": "Instància de tasca [{{count}}]",
     "mappedTaskInstances_other": "Instàncies de tasca [{{count}}]",
     "overview": "Visió general",
