fix(i18n): remove unused dark mode and light mode translations

--- a/airflow-core/src/airflow/ui/public/i18n/locales/tr/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/tr/dag.json
@@ -64,9 +64,7 @@
   "panel": {
     "buttons": {
       "options": "Seçenekler",
-      "showGantt": "Gantt Grafiğini Göster",
-      "showGraph": "Grafiği Göster",
-      "showGrid": "Izgarayı Göster"
+      "showGantt": "Gantt Grafiğini Göster"
     },
     "dagRuns": {
       "label": "Dag Çalıştırma Sayısı"
