--- a/airflow-core/src/airflow/ui/public/i18n/locales/tr/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/tr/common.json
@@ -7,6 +7,13 @@
     "Providers": "Sağlayıcılar",
     "Variables": "Değişkenler"
   },
+  "allOperators": "Bütün Operatörler",
+  "appearance": {
+    "appearance": "Görünüm",
+    "darkMode": "Karanlık Mod",
+    "lightMode": "Aydınlık Mod",
+    "systemMode": "Sistem Ayarını Uygula"
+  },
   "asset_one": "Varlık",
   "asset_other": "Varlıklar",
   "assetEvent_one": "Varlık Etkinliği",
@@ -180,6 +187,7 @@
     "failed": "Başarısız",
     "no_status": "Durum Yok",
     "none": "Durum Yok",
+    "planned": "Planlanmış",
     "queued": "Kuyrukta",
     "removed": "Kaldırılmış",
     "restarting": "Yeniden Başlatılıyor",
