--- a/airflow-core/src/airflow/ui/public/i18n/locales/de/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/de/dag.json
@@ -35,6 +35,7 @@
   "code": {
     "bundleUrl": "Bündel Url",
     "noCode": "Kein Programmcode gefunden",
+    "parseDuration": "Parse Dauer:",
     "parsedAt": "Eingelesen um:"
   },
   "extraLinks": "Extra Links",
