--- a/airflow-core/src/airflow/ui/public/i18n/locales/it/browse.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/it/browse.json
@@ -10,6 +10,9 @@
       "user": "Utente",
       "when": "Quando"
     },
+    "filters": {
+      "eventType": "Tipo di Evento"
+    },
     "title": "Registro di Controllo (Logs)"
   },
   "xcom": {
