--- a/airflow-core/src/airflow/ui/public/i18n/locales/it/assets.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/it/assets.json
@@ -25,5 +25,6 @@
   "lastAssetEvent": "Last Asset Event",
   "name": "Name",
   "producingTasks": "Producing Tasks",
+  "scheduledDags": "DAG Programmati",
   "searchPlaceholder": "Search Assets"
 }
