--- a/airflow-core/src/airflow/ui/public/i18n/locales/it/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/it/dag.json
@@ -5,6 +5,33 @@
     "reason": "Motivo",
     "title": "Dipendenze che bloccano la Task da essere pianificata"
   },
+  "calendar": {
+    "daily": "Giornaliero",
+    "hourly": "Orario",
+    "legend": {
+      "less": "Meno",
+      "more": "Più"
+    },
+    "navigation": {
+      "nextMonth": "Mese successivo",
+      "nextYear": "Anno successivo",
+      "previousMonth": "Mese precedente",
+      "previousYear": "Anno precedente"
+    },
+    "noData": "Nessun dato disponibile",
+    "noRuns": "Nessun run",
+    "totalRuns": "Run Totali",
+    "week": "Settimana {{weekNumber}}",
+    "weekdays": {
+      "friday": "Ven",
+      "monday": "Lun",
+      "saturday": "Sab",
+      "sunday": "Dom",
+      "thursday": "Gio",
+      "tuesday": "Mar",
+      "wednesday": "Mer"
+    }
+  },
   "code": {
     "bundleUrl": "URL del Bundle",
     "noCode": "Nessun Codice Trovato",
@@ -19,12 +46,29 @@
   },
   "header": {
     "buttons": {
+      "advanced": "Avanzato",
       "dagDocs": "Documentazione DAG"
     }
   },
   "logs": {
+    "allLevels": "Tutti i Livelli di Log",
+    "allSources": "Tutte le Fonti",
+    "critical": "CRITICO",
+    "debug": "DEBUG",
+    "error": "ERRORE",
+    "fullscreen": {
+      "button": "Schermo Intero",
+      "tooltip": "Premi {{hotkey}} per schermo intero"
+    },
+    "info": "INFO",
     "noTryNumber": "Nessun numero di tentativo",
-    "viewInExternal": "Visualizza i logs in {{name}} (tentativo {{attempt}})"
+    "settings": "Impostazioni Log",
+    "viewInExternal": "Visualizza i logs in {{name}} (tentativo {{attempt}})",
+    "warning": "AVVISO"
+  },
+  "navigation": {
+    "navigation": "Navigazione: Shift+{{arrow}}",
+    "toggleGroup": "Attiva/Disattiva gruppo: Spazio"
   },
   "overview": {
     "buttons": {
@@ -40,6 +84,8 @@
       "assetEvent_other": "Eventi di Asset Creati"
     },
     "failedLogs": {
+      "hideLogs": "Nascondi Logs",
+      "showLogs": "Mostra Logs",
       "title": "Logs delle Task Fallite Recenti",
       "viewFullLogs": "Visualizza i logs completi"
     }
@@ -47,8 +93,9 @@
   "panel": {
     "buttons": {
       "options": "Opzioni",
-      "showGraph": "Mostra il Grafico",
-      "showGrid": "Mostra la Griglia"
+      "showGantt": "Mostra Gantt",
+      "showGraphShortcut": "Mostra Grafico (Premi g)",
+      "showGridShortcut": "Mostra Griglia (Premi g)"
     },
     "dagRuns": {
       "label": "Numero di Run del DAG"
@@ -83,6 +130,7 @@
     "assetEvents": "Eventi di Asset",
     "auditLog": "Registro di Controllo (Logs)",
     "backfills": "Backfills",
+    "calendar": "Calendario",
     "code": "Codice",
     "details": "Dettagli",
     "logs": "Logs",
@@ -90,6 +138,7 @@
     "mappedTaskInstances_other": "Istanze di Task [{{count}}]",
     "overview": "Panoramica",
     "renderedTemplates": "Template Renderizzato",
+    "requiredActions": "Azioni Richieste",
     "runs": "Run",
     "taskInstances": "Istanze di Task",
     "tasks": "Tasks",
@@ -98,13 +147,5 @@
   "taskGroups": {
     "collapseAll": "Collassa tutti i gruppi di task",
     "expandAll": "Espandi tutti i gruppi di task"
-  },
-  "taskLogs": {
-    "allLogLevels": "Tutti i Livelli di Log",
-    "allSources": "Tutte le Fonti",
-    "fullscreen": {
-      "button": "Schermo Intero",
-      "tooltip": "Premi {{hotkey}} per schermo intero"
-    }
   }
 }
